--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 <div class='container'>
     <div class='row'>
         <div class='col-xs-12 text-center' id='top-bar'>
-            <h1>EAT DA BURGER!!!</h1>
+            <h1>Eat the burger!</h1>
         </div>
         <div class='col-xs-6 text-center' class='task'>
             <div class='row'>
@@ -11,8 +11,8 @@
                     <pre>{{this.id}}. {{this.burger_name}}</pre>
                 </div>
                 <div class='col-xs-3 text-center'>
-                    <form method='PUT' action='/burgers/update/' class='button-size'>
-                        <input type='hidden' name='burger_id' type='text' value='{{this.id}}'>
+                    <form method='GET' action='/burgers/update/{{this.id}}' class='button-size'>
+                        {{!-- <input type='hidden' name='burger_id' type='text' value='{{this.id}}'> --}}
                         <br>
                         <button type='submit' class='btn btn-default'>DEVOUR IT!
                         </button>
@@ -30,7 +30,7 @@
             </div>
         </div>
     </div>
-</div>>
+</div>
 
 <div class='container'>
     <div class='row'>
@@ -39,7 +39,7 @@
                 <input type='text' name='burger_name' class='form-control' value='' id='enter_text'>
                 <button type='submit' class='btn btn-primary' id='text-enter-button'>SUBMIT</button>
             </form>
-            <p>Enter in a burger you would like to eat!</p>
+            <p>Enter in a burger you want like to eat!</p>
         </div>
     </div>
 </div>
